Autofill textbox disable.

--- a/SPA Typing Test/index.html
+++ b/SPA Typing Test/index.html
@@ -18,7 +18,7 @@
         <div class="row">
             <div class="col-12">
                 <div id="quote" class="quote"></div>
-                <input type="text" id="input" class="form-control mt-3">
+                <input type="text" id="input" class="form-control mt-3" autocomplete="off">
                 <div class="stats mt-3">
                     <p>Time: <span id="time">30</span>s</p>
                     <p>WPM: <span id="wpm">0</span></p>
