CSS, HTML, and Main Menu changes

--- a/SPA Typing Test/index.html
+++ b/SPA Typing Test/index.html
@@ -10,8 +10,18 @@
 </head>
 <body>
     <div id="main-menu" class="container text-center mt-5">
-        <h1 class="mb-4">Typing Test</h1>
-        <button id="start-test" class="btn btn-primary">Start Test</button>
+        <h1 class="mb-4">Typing Game</h1>
+        <button id="play-button" class="btn btn-primary">Play</button>
+        <button id="leaderboard-button" class="btn btn-secondary">Leaderboard</button>
+        <button id="stats-button" class="btn btn-secondary">Stats</button>
+    </div>
+
+    <div id="gamemodes-menu" class="container text-center mt-5" style="display: none;">
+        <h1 class="mb-4">Select Game Mode</h1>
+        <button id="single-quote-button" class="btn btn-primary">Single Quote</button>
+        <button id="multi-quote-button" class="btn btn-secondary">Multi-Quote</button>
+        <button id="word-race-button" class="btn btn-secondary">Word Race</button>
+        <button id="back-to-main" class="btn btn-secondary mt-3">Back to Menu</button>
     </div>
 
     <div id="typing-test" class="container mt-5" style="display: none;">
@@ -21,8 +31,8 @@
                 <input type="text" id="input" class="form-control mt-3" autocomplete="off">
                 <div class="stats mt-3">
                     <p>Time: <span id="time">30</span>s</p>
-                    <p>WPM: <span id="wpm">0</span></p>
-                    <p>Accuracy: <span id="accuracy">100</span>%</p>
+                    <p>WPM: <span id="wpm">0.00</span></p>
+                    <p>Accuracy: <span id="accuracy">100.00</span>%</p>
                 </div>
                 <button id="reset-test" class="btn btn-warning mt-3">Reset</button>
                 <button id="back-menu" class="btn btn-secondary mt-3">Back to Menu</button>
