Trying to make Live Reload work with Backspace. Also fixed WPM and Accuracy calculations

--- a/SPA Typing Test/index.html
+++ b/SPA Typing Test/index.html
@@ -10,18 +10,18 @@
 </head>
 <body>
     <div id="main-menu" class="container text-center mt-5">
-        <h1 class="mb-4">Typing Game</h1>
-        <button id="play-button" class="btn btn-primary">Play</button>
-        <button id="leaderboard-button" class="btn btn-secondary">Leaderboard</button>
-        <button id="stats-button" class="btn btn-secondary">Stats</button>
+        <h1 class="mb-4">Typing Test</h1>
+        <button id="start-test" class="btn btn-primary mb-3">Play</button>
+        <button id="leaderboard" class="btn btn-secondary mb-3">Leaderboard</button>
+        <button id="stats" class="btn btn-secondary mb-3">Stats</button>
     </div>
 
     <div id="gamemodes-menu" class="container text-center mt-5" style="display: none;">
         <h1 class="mb-4">Select Game Mode</h1>
-        <button id="single-quote-button" class="btn btn-primary">Single Quote</button>
-        <button id="multi-quote-button" class="btn btn-secondary">Multi-Quote</button>
-        <button id="word-race-button" class="btn btn-secondary">Word Race</button>
-        <button id="back-to-main" class="btn btn-secondary mt-3">Back to Menu</button>
+        <button id="single-quote" class="btn btn-secondary mb-3">Single Quote</button>
+        <button id="multi-quote" class="btn btn-secondary mb-3" disabled>Multi-Quote</button>
+        <button id="word-race" class="btn btn-secondary mb-3" disabled>Word Race</button>
+        <button id="back-to-main" class="btn btn-secondary mb-3">Back to Main Menu</button>
     </div>
 
     <div id="typing-test" class="container mt-5" style="display: none;">
