--- a/SPA Typing Test/index.html
+++ b/SPA Typing Test/index.html
@@ -10,11 +10,11 @@
 </head>
 <body class="default-theme">
     <div id="main-menu" class="container text-center mt-5">
-        <h1 class="mb-4">Typing Test</h1>
+        <h1 class="mb-2">Typing Test</h1>
+        <h5 class="mb-4">by Andy Roh</h5> <!-- New subheading -->
         <button id="start-test" class="btn btn-primary mb-3">Play</button>
-        <button id="leaderboard" class="btn btn-secondary mb-3">Leaderboard</button>
-        <button id="stats" class="btn btn-secondary mb-3">Stats</button>
         <button id="themes-button" class="btn btn-secondary mb-3">Themes</button>
+        <button id="portfolio-button" class="btn btn-secondary mb-3">Portfolio</button> <!-- New Portfolio button -->
     </div>
 
     <div id="themes-menu" class="container text-center mt-5" style="display: none;">
