--- a/SPA Typing Test/index.html
+++ b/SPA Typing Test/index.html
@@ -11,16 +11,20 @@
 <body class="default-theme">
     <div id="main-menu" class="container text-center mt-5">
         <h1 class="mb-2">Typing Test</h1>
-        <h5 class="mb-4">by Andy Roh</h5> <!-- New subheading -->
+        <h5 class="mb-4">by Andy Roh</h5>
         <button id="start-test" class="btn btn-primary mb-3">Play</button>
         <button id="themes-button" class="btn btn-secondary mb-3">Themes</button>
-        <button id="portfolio-button" class="btn btn-secondary mb-3">Portfolio</button> <!-- New Portfolio button -->
+        <button id="portfolio-button" class="btn btn-secondary mb-3">Portfolio</button>
+        <button id="github-button" class="btn btn-secondary mb-3">GitHub Repo</button> <!-- New GitHub button -->
     </div>
 
     <div id="themes-menu" class="container text-center mt-5" style="display: none;">
         <h1 class="mb-4">Select a Theme</h1>
         <button id="default-button" class="btn btn-secondary mb-3">Default</button>
         <button id="polar-night-button" class="btn btn-secondary mb-3">Polar Night</button>
+        <button id="dark-mode-button" class="btn btn-secondary mb-3">Dark Mode</button>
+        <button id="high-contrast-button" class="btn btn-secondary mb-3">High Contrast</button>
+        <button id="solarized-light-button" class="btn btn-secondary mb-3">Solarized Light</button>
         <button id="back-to-main-from-themes" class="btn btn-secondary mb-3">Back to Main Menu</button>
     </div>
 
