--- a/SPA Typing Test/index.html
+++ b/SPA Typing Test/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="default-theme">
-    <div id="main-menu" class="container text-center mt-5">
+    <div id="main-menu" class="container text-center">
         <h1 class="mb-2">Typing Test</h1>
         <h5 class="mb-4">by Andy Roh</h5>
         <button id="start-test" class="btn btn-primary mb-3">Play</button>
@@ -18,17 +18,17 @@
         <button id="github-button" class="btn btn-secondary mb-3">GitHub Repo</button> <!-- New GitHub button -->
     </div>
 
-    <div id="themes-menu" class="container text-center mt-5" style="display: none;">
+    <div id="themes-menu" class="container text-center" style="display: none;">
         <h1 class="mb-4">Select a Theme</h1>
         <button id="default-button" class="btn btn-secondary mb-3">Default</button>
         <button id="polar-night-button" class="btn btn-secondary mb-3">Polar Night</button>
         <button id="dark-mode-button" class="btn btn-secondary mb-3">Dark Mode</button>
         <button id="high-contrast-button" class="btn btn-secondary mb-3">High Contrast</button>
-        <button id="solarized-light-button" class="btn btn-secondary mb-3">Solarized Light</button>
+        <button id="pastel-button" class="btn btn-secondary mb-3">Pastel</button> <!-- Replaced Solarized Light -->
         <button id="back-to-main-from-themes" class="btn btn-secondary mb-3">Back to Main Menu</button>
     </div>
 
-    <div id="gamemodes-menu" class="container text-center mt-5" style="display: none;">
+    <div id="gamemodes-menu" class="container text-center" style="display: none;">
         <h1 class="mb-4">Select Game Mode</h1>
         <button id="single-quote" class="btn btn-secondary mb-3">Single Quote</button>
         <button id="multi-quote" class="btn btn-secondary mb-3" disabled>Multi-Quote</button>
@@ -36,7 +36,7 @@
         <button id="back-to-main" class="btn btn-secondary mb-3">Back to Main Menu</button>
     </div>
 
-    <div id="typing-test" class="container mt-5" style="display: none;">
+    <div id="typing-test" class="container" style="display: none;">
         <div class="row">
             <div class="col-12">
                 <div id="quote" class="quote"></div>
@@ -52,7 +52,7 @@
         </div>
     </div>
 
-    <div id="results-menu" class="container text-center mt-5" style="display: none;">
+    <div id="results-menu" class="container text-center" style="display: none;">
         <h1 class="mb-4">Test Results</h1>
         <p>WPM: <span id="results-wpm"></span></p>
         <p>Accuracy: <span id="results-accuracy"></span>%</p>
